# aktualizr-lite

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .jobserv.yml  CMakeLists.txt  Makefile  README.adoc  README.md  aklite-client.py  cmake-init.sh  dev-flow.mk  dev-shell  dev-shell-e2e-test.sh  e2e-test.py  how-to-run-locally.md  pyproject.toml  schaklite.py  unit-test
.github/workflows/: build-e2e-image.yml  ci.yml  manual.yml
apps/aklite-apps/: CMakeLists.txt  cmds.cpp  cmds.h  main.cpp
apps/aklite-offline/: CMakeLists.txt  cmds.cpp  cmds.h  main.cpp
apps/tufctl/: CMakeLists.txt  main.cpp
docker/: Dockerfile
docker-e2e-test/: .env.dev  Dockerfile  config.json  docker-compose.yml  docker-credential-fio-helper  e2e-test-create-targets.py  e2e-test.py  entrypoint.sh  requirements.txt
docs/: architecture.md  callbacks.md  command-line-interface.md  configuration.md  custom-client.md  development-container.md  how-to-run-locally.md
docs/img/: aktualizr-lite.xml
examples/: CMakeLists.txt  custom-client.cc  custom_client.py
examples/custom-client-cxx/: CMakeLists.txt  cli.cpp  cli.h  cmds.h  daemon.cpp  main.cc  main.cpp
include/aktualizr-lite/: aklite_client_ext.h  api.h  daemon_main.h
include/aktualizr-lite/cli/: cli.h
include/aktualizr-lite/storage/: stat.h
include/aktualizr-lite/tuf/: tuf.h
scripts/: clang-tidy-wrapper.sh
src/: CMakeLists.txt  aklite_client_ext.cc  aklitereportqueue.cc  aklitereportqueue.h  api.cc  appengine.cc  appengine.h  cli.cc  compose_fake.sh  composeapp.cc  composeapp.h  composeappengine.cc  composeappengine.h  composeappmanager.cc  composeappmanager.h  composeapptree.cc  composeapptree.h  daemon.cc  daemon.h  docker.cc  docker.h  dockerclient.cc  dockerclient.h  downloader.h  exec.cc  exec.h  helpers.cc  helpers.h  helpers_test.cc  installer.h  liteclient.cc  liteclient.h  main.cc  ostree.cc  ostree.h  rootfstreemanager.cc  rootfstreemanager.h  server-main.cc  target.cc  target.h  (+5 more)
src/bootloader/: bootloaderlite.cc  bootloaderlite.h  rollbackfactory.cc
src/bootloader/rollbacks/: exception.h  factory.h  fiovb.h  generic.h  masked.h  rollback.h
src/cli/: cli.cc  cli.h
src/compose/: composeappmanager.cc
src/composeapp/: appengine.cc  appengine.h
src/containerd/: client.cc  client.h  engine.cc  engine.h
src/ctr/: appengine.cc  appengine.h
src/docker/: appstore.cc  appstore.h  composeappengine.cc  composeappengine.h  composeapptree.cc  composeapptree.h  composeinfo.cc  composeinfo.h  docker.cc  docker.h  dockerclient.cc  dockerclient.h  restorableappengine.cc  restorableappengine.h
src/offline/: CMakeLists.txt  apps_puller.cc  apps_puller.h  client.cc  client.h  fetcher.cc  fetcher.h  ostree_puller.cc  ostree_puller.h
src/ostree/: repo.cc  repo.h  sysroot.cc  sysroot.h
src/storage/: stat.cc  stat.h
src/tuf/: akhttpsreposource.cc  akhttpsreposource.h  akrepo.cc  akrepo.h  httprepo.cc  httprepo.h  localreposource.cc  localreposource.h
tests/: CMakeLists.txt  aklite_offline_api_test.cc  aklite_offline_test.cc  aklite_rollback_ext_test.cc  aklite_rollback_test.cc  aklite_test.cc  apiclient_test.cc  apiserver_test.cc  boot_flag_mgmt_test.cc  cli_test.cc  cliclient_test.cc  cmake-modules  compose_fake.sh  composeapp_test.cc  composeappengine_test.cc  daemon_test.cc  device-gateway_fake.py  docker-compose_fake.py  docker-daemon_fake.py  docker-registry_fake.py  docker_fake.sh  docker_test.cc  exec_test.cc  helpers_test.cc  liteclientHSM_test.cc  liteclient_test.cc  make_sys_rootfs.sh  nospace_test.cc  ostree_test.cc  restorableappengine_test.cc  template.yaml  test_lite.sh  test_liteclient.cc  test_ostree.cc  test_target.cc  yaml2json_test.cc
tests/fixtures/: aklitetest.cc  basehttpclient.cc  composeapp.cc  composeappenginetest.cc  dockerdaemon.cc  dockerregistry.cc  fstatvfs-mock.cc  liteclienthsmtest.cc  liteclienttest.cc
tests/fixtures/liteclient/: boot_flag_mgr.cc  devicegatewaymock.cc  devicehsm.cc  executecmd.cc  fiovb.cc  mockappengine.cc  ostreerepomock.cc  rootcapki.cc  serverpki.cc  softhsm.cc  subscriberpki.cc  sysostreerepomock.cc  sysrootfs.cc  tufrepomock.cc
